backend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coinbase-crypto-exchange-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: crypto.kaveensewhan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coinbase-crypto-exchange-service-blue # Initially route to Blue
                port:
                  number: 80
